# dockerhub

./: Dockerfile  LICENSE  README.md
datascience/: .envrc  Dockerfile  Pipfile  Pipfile.lock.amd64  Pipfile.lock.arm64  pyproject.toml  requirements.txt
datascience-amd64/: Dockerfile  Pipfile
datascience-amd64/hooks/: build
datascience-arm64/: Dockerfile
datascience-arm64/hooks/: build  post_checkout
datascience/hooks/: build
postgres-util/: Dockerfile  pgdump.sh
postgres-util/hooks/: build
