[project]
name = "datascience"
version = "0.0.0"
description = "Project description"
requires-python = "==3.10.15"
dependencies = [
    "aiobotocore==2.5.4",
    "aiokafka==0.10.0",
    "asyncpg==0.29.0",
    "boto3==1.28.17",
    "confluent-kafka==2.1.0",
    "dateparser==1.2.0",
    "fastparquet==2023.7.0",
    "igraph==0.11.2",
    "openai==1.5.0",
    "opensearch-py[async]==2.4.2",
    "pyathena==3.2.1",
    "python-dotenv==1.0.1",
    "python-igraph==0.11.2",
    "python-snappy==0.6.1",
    "s3fs==2023.6.0",
    "sentence-transformers==2.2.2",
    "sqlalchemy[asyncio]==2.0.25",
    "torch==2.2.2",
    "torchmetrics==1.3.0.post0",
]

[tool.uv]
dev-dependencies = []
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
